# ----------------------------------------------------------
#  Configure file for JSF.
#  This file is sourced by $JSFROOT/bin/makespec.  It creates
#  header files for JSF compile and link
#
# $Id$
# ----------------------------------------------------------

PYTHIA_VERSION=6
PYTHIA_SUBVERSION=222
PYTHIA_LIBNAME=Pythia6

#
#PYTHIA_VERSION=5
#PYTHIA_SUBVERSION=720
#PYTHIA_LIBNAME=Pythia5
#

